summary page complete, summaryCartIcon incomplete

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,26 @@ body {
     box-sizing: border-box;
 }
 
+.cart-display {
+  /* align-items: center;
+  align-content : center;
+  justify-content: center;
+  text-align: center; */
+
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background-color: white;
+  z-index: 1;
+  width: 90%;
+  border-radius: 10px;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 50px;
+  box-sizing: border-box;
+}
+
 .Menu-Displayed-Background {
   background-color: #F1F1F1;
   opacity: .5;
