--- a/src/Components/CartIconSummary/CartIconSummary.css
+++ b/src/Components/CartIconSummary/CartIconSummary.css
@@ -58,13 +58,12 @@ text-align: right;
 }
 
 .CartIconSummaryCartItemQuantity {
-    display: inline-block;
-    order: 3;
-    margin-top: 10px;
-    text-align: right;
-    flex: 1;
-    font-size: 12px;
-    opacity: .7;
+    /* display: inline-block; */
+    /* order: 3;
+    margin-top: 10px; */
+    /* flex: 1; */
+    /* font-size: 12px;
+    opacity: .7; */
     /* width: 15%; */
 }
 
@@ -99,4 +98,33 @@ text-align: right;
     text-align: right;
 }
 
+.CartIconSummaryTextContainer {
+  display: flex;
+  flex-direction: row;
+  margin: 10px 10% 0 10%;
+  font-size: 10px;
+  opacity: .5;
+}
 
+.CartIconSummaryTextContainer:nth-of-type(5) {
+display: flex;
+flex-direction: row;
+margin: 20px 10% 0 10%;
+}
+
+.CartIconSummaryTextContainer:nth-of-type(2) {
+display: flex;
+flex-direction: row;
+margin: 30px 10% 0 10%;
+}
+
+.CartIconSummaryText {
+  order: 1;
+  width: 85%;
+}
+
+.CartIconSummaryAmount {
+  order: 2;
+  width: 15%;
+  text-align: right;
+}
