fixed summary page button -- pre-menu background fix

--- a/src/Components/CartIconSummary/CartIconSummary.css
+++ b/src/Components/CartIconSummary/CartIconSummary.css
@@ -128,3 +128,15 @@ margin: 30px 10% 0 10%;
   width: 15%;
   text-align: right;
 }
+
+.CartIconSummaryButton {
+  height: 48px;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+  margin: 40px 10%;
+  box-sizing: border-box;
+}
+
