--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -44,6 +44,21 @@
   padding-left: 8px;
 }
 
+.btnProductInfoOrangeThemeContinue {
+  background-color: #da753a;
+  color: white;
+  width: 100%;
+  height: 100%;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  font-size: 13px;
+  line-height: 10px;
+  border-style: none;
+  filter: brightness(100%);
+  mix-blend-mode: normal; 
+  padding-left: 8px;  
+}
+
 /* @media screen and (min-width: 355px) {
     .btnProductInfoOrangeTheme {
         width: 130px;
