--- a/src/Components/SummaryPage/SummaryPage.css
+++ b/src/Components/SummaryPage/SummaryPage.css
@@ -71,7 +71,7 @@
     display: flex;
     flex-direction: row;
     margin: 10px 10% 0 10%;
-    font-size: 10px;
+    font-size: 14px;
     opacity: .5;
 }
 
@@ -96,6 +96,24 @@
     order: 2;
     width: 15%;
     text-align: right;
+    letter-spacing: .8px;
+    font-weight: bolder;
+    opacity: 1;
+    color: black;
 }
 
+.SummaryPageAmountColor {
+    color: #da753a;
+}
+
+.SummaryPageButton {
+  height: 48px;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+  margin: 40px 10%;
+  box-sizing: border-box;
+}
 
