added counterIncrementer for summarycarticon

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ body {
 .Menu-Displayed-Background {
   background-color: #F1F1F1;
   opacity: .5;
-  /* height: 3300px; */
+  height: 100%;
 }
 
 .Menu-Displayed-Background-Footer {
@@ -132,7 +132,6 @@ body {
   .Menu-Displayed-Background {
     background-color: #F1F1F1;
     opacity: .5;
-    height: 2700px;
   }
 
 }
