fixed cart issue not incrementing/decrementing correctly

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ body {
   padding-right: 5%;
   padding-bottom: 50px;
   box-sizing: border-box;
+  max-width: 280px;
 }
 
 .Menu-Displayed-Background {
