--- a/src/Components/CartIconSummary/CartIconSummary.css
+++ b/src/Components/CartIconSummary/CartIconSummary.css
@@ -5,6 +5,18 @@
   margin: 20px 0 0 0;
 }
 
+.CartIconSummaryCartItemIndividualContainer {
+  display: flex;
+  flex-direction: row;
+  order: 1;
+  width: 60%;
+}
+
+.CartIconSummaryCartItemQuantity {
+  order: 2;
+  width: 40%;
+}
+
 .CartIconSummaryCartDeleteContainer {
   display: flex;
   flex-direction: row;
@@ -12,6 +24,8 @@
   font-size: 12px;
   margin-top: 20px;
 }
+
+
 
 .CartIconSummaryCartQuantity {
 order: 1;
@@ -28,6 +42,7 @@ text-align: right;
 
 .CartIconSummaryImageContainer {
     order: 1;
+    width: 50px;
 }
 
 
@@ -57,15 +72,7 @@ text-align: right;
   opacity: .5;
 }
 
-.CartIconSummaryCartItemQuantity {
-    /* display: inline-block; */
-    /* order: 3;
-    margin-top: 10px; */
-    /* flex: 1; */
-    /* font-size: 12px;
-    opacity: .7; */
-    /* width: 15%; */
-}
+
 
 .CartIconSummaryTextContainer {
     display: flex;
